--- a/processadorNOSPE.ipynb
+++ b/processadorNOSPE.ipynb
@@ -1,1 +1,158 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"provenance":[],"authorship_tag":"ABX9TyP9K0qxVcWGDtiVR455Fu0Q"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","execution_count":15,"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"Yx-nxqYNpUWZ","executionInfo":{"status":"ok","timestamp":1686140114469,"user_tz":180,"elapsed":337,"user":{"displayName":"Mirkos Martins","userId":"09053967521280766350"}},"outputId":"e50d996f-d405-4cbd-9673-caf838b1040a"},"outputs":[{"output_type":"stream","name":"stdout","text":["Instrucao: LOAD  destino 0 origem 10\n","[10, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n","Instrucao: LOAD  destino 9 origem R0\n","[10, 0, 0, 0, 0, 0, 0, 0, 0, 10, 0]\n","Instrucao: SUB  destino 9 origem 1\n","[10, 0, 0, 0, 0, 0, 0, 0, 0, 9, 0]\n","Instrucao: LOAD  destino 10 origem R0\n","[10, 0, 0, 0, 0, 0, 0, 0, 0, 9, 10]\n","Instrucao: MULT  destino 10 origem R9\n","[10, 0, 0, 0, 0, 0, 0, 0, 0, 9, 90]\n","Instrucao: LOAD  destino 1 origem R10\n","[10, 90, 0, 0, 0, 0, 0, 0, 0, 9, 90]\n","Instrucao: SUB  destino 9 origem 1\n","[10, 90, 0, 0, 0, 0, 0, 0, 0, 8, 90]\n","Instrucao: MULT  destino 10 origem R9\n","[10, 90, 0, 0, 0, 0, 0, 0, 0, 8, 720]\n","Instrucao: LOAD  destino 1 origem R10\n","[10, 720, 0, 0, 0, 0, 0, 0, 0, 8, 720]\n","Instrucao: SUB  destino 9 origem 1\n","[10, 720, 0, 0, 0, 0, 0, 0, 0, 7, 720]\n","Instrucao: MULT  destino 10 origem R9\n","[10, 720, 0, 0, 0, 0, 0, 0, 0, 7, 5040]\n","Instrucao: LOAD  destino 1 origem R10\n","[10, 5040, 0, 0, 0, 0, 0, 0, 0, 7, 5040]\n","Instrucao: SUB  destino 9 origem 1\n","[10, 5040, 0, 0, 0, 0, 0, 0, 0, 6, 5040]\n","Instrucao: MULT  destino 10 origem R9\n","[10, 5040, 0, 0, 0, 0, 0, 0, 0, 6, 30240]\n","Instrucao: LOAD  destino 1 origem R10\n","[10, 30240, 0, 0, 0, 0, 0, 0, 0, 6, 30240]\n","Instrucao: SUB  destino 9 origem 1\n","[10, 30240, 0, 0, 0, 0, 0, 0, 0, 5, 30240]\n","Instrucao: MULT  destino 10 origem R9\n","[10, 30240, 0, 0, 0, 0, 0, 0, 0, 5, 151200]\n","Instrucao: LOAD  destino 1 origem R10\n","[10, 151200, 0, 0, 0, 0, 0, 0, 0, 5, 151200]\n","Instrucao: SUB  destino 9 origem 1\n","[10, 151200, 0, 0, 0, 0, 0, 0, 0, 4, 151200]\n","Instrucao: MULT  destino 10 origem R9\n","[10, 151200, 0, 0, 0, 0, 0, 0, 0, 4, 604800]\n","Instrucao: LOAD  destino 1 origem R10\n","[10, 604800, 0, 0, 0, 0, 0, 0, 0, 4, 604800]\n","Instrucao: SUB  destino 9 origem 1\n","[10, 604800, 0, 0, 0, 0, 0, 0, 0, 3, 604800]\n","Instrucao: MULT  destino 10 origem R9\n","[10, 604800, 0, 0, 0, 0, 0, 0, 0, 3, 1814400]\n","Instrucao: LOAD  destino 1 origem R10\n","[10, 1814400, 0, 0, 0, 0, 0, 0, 0, 3, 1814400]\n","Instrucao: SUB  destino 9 origem 1\n","[10, 1814400, 0, 0, 0, 0, 0, 0, 0, 2, 1814400]\n","Instrucao: MULT  destino 10 origem R9\n","[10, 1814400, 0, 0, 0, 0, 0, 0, 0, 2, 3628800]\n","Instrucao: LOAD  destino 1 origem R10\n","[10, 3628800, 0, 0, 0, 0, 0, 0, 0, 2, 3628800]\n","Instrucao: SUB  destino 9 origem 1\n","[10, 3628800, 0, 0, 0, 0, 0, 0, 0, 1, 3628800]\n","Instrucao: MULT  destino 10 origem R9\n","[10, 3628800, 0, 0, 0, 0, 0, 0, 0, 1, 3628800]\n","Instrucao: LOAD  destino 1 origem R10\n","[10, 3628800, 0, 0, 0, 0, 0, 0, 0, 1, 3628800]\n","FIM DO PROGRAMA\n"]}],"source":["instrucoes = open('/content/drive/MyDrive/2023/1 SEMESTRE/compiladores/fatorial.txt')\n","memoria = [0,0,0,0,0,0,0,0,0,0,0]\n","\n","\n","\n","def clock(comando):\n","  if comando=='HALT':\n","    print('FIM DO PROGRAMA')\n","    return\n","  else:\n","    elementos = comando.split(' ')\n","    instrucao = elementos[0]\n","    destino = int(elementos[1].split(',')[0][1:])\n","    #destino = destino[1:]\n","    origem = elementos[1].split(',')[1]\n","    if origem[0]=='R':\n","      flag=0\n","    else:\n","      flag=1\n","    if instrucao == 'LOAD':\n","      if flag==0:\n","        memoria[destino] = memoria[int(origem[1:])]\n","      else:\n","        memoria[destino]=int(origem)\n","    if instrucao == 'ADD':\n","      if flag==0:\n","        memoria[destino]=memoria[destino]+memoria[int(origem[1:])]\n","      else:\n","        memoria[destino]=memoria[destino]+int(origem)\n","    if instrucao == 'SUB':\n","      if flag==0:\n","        memoria[destino]=memoria[destino]-memoria[int(origem[1:])]\n","      else:\n","        memoria[destino]=memoria[destino]-int(origem)\n","    if instrucao == 'MULT':\n","      if flag==0:\n","        memoria[destino]=memoria[destino]*memoria[int(origem[1:])]\n","      else:\n","        memoria[destino]=memoria[destino]*int(origem)\n","    #if instrucao == 'DIV':\n","\n","    print('Instrucao:',instrucao,' destino',destino,'origem',origem)\n","    print(memoria)\n","\n","for linha in instrucoes:\n","  linha = linha.split('#')[0]\n","  clock(linha)"]}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yx-nxqYNpUWZ",
+        "outputId": "4f2e7849-6d50-46cc-ce7a-b935688d1361"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[9, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[9, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[9, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[8, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[8, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[8, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[7, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[7, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[7, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[6, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[6, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[6, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "FIM DO PROGRAMA\n"
+          ]
+        }
+      ],
+      "source": [
+        "instrucoes = open('/content/drive/MyDrive/2023/1 SEMESTRE/compiladores/decremento.txt')\n",
+        "memoria = [0,0,0,0,0,0,0,0,0,0,0]\n",
+        "\n",
+        "\n",
+        "\n",
+        "def clock(comando,i):\n",
+        "  if 'HALT' in comando:\n",
+        "    print('FIM DO PROGRAMA')\n",
+        "    return -666\n",
+        "  else:\n",
+        "    #print('COMANDO: ',comando)\n",
+        "    elementos = comando.split(' ')\n",
+        "    instrucao = elementos[0]\n",
+        "    if ',' in elementos[1]:\n",
+        "      destino = int(elementos[1].split(',')[0][1:])\n",
+        "      #destino = destino[1:]\n",
+        "      origem = elementos[1].split(',')[1]\n",
+        "    else:\n",
+        "      destino = elementos[1]\n",
+        "      origem = '0'\n",
+        "    #print('**',origem,destino)\n",
+        "    if origem[0]=='R':\n",
+        "      flag=0\n",
+        "    else:\n",
+        "      flag=1\n",
+        "    ###### trata as instrucoes #####\n",
+        "    if instrucao == 'LOAD':\n",
+        "      if flag==0:\n",
+        "        memoria[destino] = memoria[int(origem[1:])]\n",
+        "      else:\n",
+        "        memoria[destino]=int(origem)\n",
+        "    if instrucao == 'ADD':\n",
+        "      if flag==0:\n",
+        "        memoria[destino]=memoria[destino]+memoria[int(origem[1:])]\n",
+        "      else:\n",
+        "        memoria[destino]=memoria[destino]+int(origem)\n",
+        "    if instrucao == 'SUB':\n",
+        "      if flag==0:\n",
+        "        memoria[destino]=memoria[destino]-memoria[int(origem[1:])]\n",
+        "      else:\n",
+        "        memoria[destino]=memoria[destino]-int(origem)\n",
+        "    if instrucao == 'MULT':\n",
+        "      if flag==0:\n",
+        "        memoria[destino]=memoria[destino]*memoria[int(origem[1:])]\n",
+        "      else:\n",
+        "        memoria[destino]=memoria[destino]*int(origem)\n",
+        "    #if instrucao == 'DIV':\n",
+        "    if instrucao == 'CMP':\n",
+        "      #Compara origem e destino. Se forem iguais executa a linha i+1,\n",
+        "      #se forem difeentes executa a linha i+2\n",
+        "      if flag==0:\n",
+        "        if memoria[destino]==memoria[int(origem[1:])]:\n",
+        "          return i+1\n",
+        "        else:\n",
+        "          return i+2\n",
+        "      else:\n",
+        "        if memoria[destino] == int(origem):\n",
+        "          #print('Instrucao:',instrucao,' destino',destino,'origem',origem)\n",
+        "          print(memoria)\n",
+        "          #print('i=',i,'retorna:',i+1,'na lista:',i)\n",
+        "          return i+1\n",
+        "        else:\n",
+        "          #print('Instrucao:',instrucao,' destino',destino,'origem',origem)\n",
+        "          print(memoria)\n",
+        "          #print('i=',i,'retorna:',i+1,'na lista:',i)\n",
+        "          return i+2\n",
+        "    if instrucao == 'JMP':\n",
+        "      #IMPLEMENTAR\n",
+        "      #print('Instrucao:',instrucao,' destino',destino,'origem',origem)\n",
+        "      print(memoria)\n",
+        "      #print('i=',i,'retorna:',i+1,'na lista:',i)\n",
+        "      return int(destino)-1\n",
+        "\n",
+        "    #print('Instrucao:',instrucao,' destino',destino,'origem',origem)\n",
+        "    print(memoria)\n",
+        "    #print('i=',i,'retorna:',i+1,'na lista:',i)\n",
+        "    return i+1\n",
+        "\n",
+        "#for linha in instrucoes:\n",
+        "#  linha = linha.split('#')[0]\n",
+        "#  clock(linha)\n",
+        "\n",
+        "linhas = instrucoes.readlines() #le todas as linhas\n",
+        "#LINHAS EH UMA LISTA!\n",
+        "\n",
+        "i=0\n",
+        "while(i!=-666):\n",
+        "  i = clock(linhas[i],i)"
+      ]
+    }
+  ]
+}
